/*
 * $Id: ChangeLog,v 1.6466 2009/05/26 13:25:19 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2009-05-26 19:30 UTC+0300 Pavel Tsarenko <tpe2/at/mail.ru>
  * source/ct/print.c
    * formatting
    + added PRINTSEND() for win32 platform

2009-05-26 10:25 UTC-0300 Luiz Rafael Culik Guimaraes <luiz at xharbour.com.br>
  * source/rdd/usrrdd/rdds/arrayrdd.prg
    ! few fixes provided by Quique

2009-05-26 13:18 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * dbf1.c
  * dbfcdx\dbfcdx1.c
  * dbffpt\dbffpt1.c
  * dbfnsx\dbfnsx1.c
  * sdf1.c
    * removed some cast warnings.

2009-05-25 12:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * tests\xmltest\hbxml.c
    + added missing file to test TxmlDocument() class.

2009-05-25 16:38 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbapi.h
  * include\hbapifs.h
  * source\rdd\dbfnsx\dbfnsx1.c
    ! fixed minor warnings. Thk's to Enrico Maria Giordano

2009-05-25 16:15 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbrddnsx.h
  * source\common\hbdate.c
    ! fixed some missing code from last update. fixed msvc build and dbfnsx rdd.

2009-05-22 18:00 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbdate.h  
  * source\common\hbdate.c
    + Added api hb_dbaselockEncode( char * pszTimeDate ) to encode this time of fields.  
  * include\dbinfo.ch
    + Added #define DBRI_DBASELOCK           10  /* get lock info */
      to get info about lock on shared tables and locked registers.
  * source\rdd\dbcmd.c
    + added LKSYS( nInfo ) function with this parameter:
      0 Time when lock was placed
      1 Date when lock was placed
      2 Login name of user who locked record or file
  * include\hbapirdd.h
  * include\hbrddbmc.h
  * include\hbrddcdx.h
  * include\hbrdddbf.h